# plantilla-proyecto-python

./: .env.private  .env.public  .env.shared  .flake8  .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  index.html  makefile  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements-test.txt  requirements-tests.txt  requirements.txt  write-requirements.sh  write_requirements.sh
.github/workflows/: ci.yml  deploy.yml
codigo/configuracion/: index.html
codigo/logger/: index.html
codigo/tutorial/: index.html
conf/: main.yaml
docs/: about.md  index.md  tutorial.md
docs/codigo/: configuracion.md  logger.md  tutorial.md
docs/otros/: dvc.md  librerias.md  lineamientos.md  notebooks.md
logger/: index.html
notebooks/: 00 - Ejemplo.py  template.ipynb
otros/dvc/: index.html
otros/librerias/: index.html
otros/lineamientos/: index.html
otros/notebooks/: index.html
search/: search_index.json
src/: __init__.py  configuracion.py  logger.py  tutorial.py
src/proyecto/: configuracion.py  logger.py  tutorial.py
tests/: test_project.py
tutorial/: index.html
