[project]
name = "plantilla-proyecto-python"
version = "0.9.0"
description = "Plantilla para organizar proyectos incorporando mejores prácticas"
authors = ["Alejandro Perez Londoño <perezl.alejandro@gmail.com>"]
readme = "README.md"

requires-python = ">=3.12,<3.13"

dependencies = [
    "pydantic-settings>=2.5.2",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dvc = [
    "dvc[s3]>=3.55.2",
]
notebooks = [
    "spyder-kernels>=3.0.0",
]
tests = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocstrings>=0.26.0",
    "mkdocstrings-python>=1.11.1",
    "mkdocs-autorefs>=1.2.0",
    "mkdocs-material>=9.5.34",
    "mkdocs-include-markdown-plugin>=6.2.2",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "ruff>=0.6.5",
    "pip-audit>=2.7.3",
    "pre-commit>=3.8.0",
    "icecream>=2.1.3",
]

[tool.mypy]
files = ["src/**/*.py", "tests/**/*.py"]
plugins = [ "pydantic.mypy" ]
exclude = [".venv"]
no_namespace_packages = true
allow_redefinition = false
check_untyped_defs = true
disallow_any_explicit = false
disallow_any_generics = true
disallow_untyped_calls = true
ignore_errors = false
ignore_missing_imports = true
ignore_missing_imports_per_module = true
implicit_reexport = false
local_partial_types = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_no_return = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true

[tool.ruff]
line-length = 88
src = ["src", "test"]

[tool.ruff.lint]
select = [
  "A",   # builtins
  "B",   # bugbear
  "COM", # commas
  "C90", # mccabe
  "E",   # pycodestyle
  "F",   # pyflakes
  "D",   # pydocstyle
  "I",   # isort
  "N",   # naming
  "PL",  # pylint
  "UP",  # pyupgrade
  "S",   # bandit
]
ignore = [
  "COM812", # trailing comma missing ...
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101", # asserts allowed in tests
]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["D104"] # allow missing docstring in public package

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.isort]
known-first-party = ["configuracion", "logger"]

[tool.ruff.lint.mccabe]
max-complexity = 6

[tool.ruff.lint.pydocstyle]
convention = "google"
